syntax = "proto3";
package backend;

import "backend/v1/messages.proto";

import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";

option go_package = ".;pb";

message RegisterConnectionRequest {
    string request_id = 1;
    Connection connection = 2;
}

message GetConnectionRequest {
    string request_id = 1;
    string hostname = 2;
}
message GetConnectionResponse {
    Connection connection = 1;
}

service Backend {
    rpc RegisterConnection(RegisterConnectionRequest) returns (google.protobuf.Empty);
    rpc GetConnection(GetConnectionRequest) returns (GetConnectionResponse);
}
